# scaryedr

./: Cargo.toml  README.md  setup.sh
ebpf/: Cargo.toml  rust-tool-chain.toml
ebpf/src/: events.rs  lib.rs  main.rs  maps.rs  programs.rs  stack.rs
ebpf/src/events/: bind.rs  connect.rs  dns.rs  execve.rs  file.rs  listen.rs  path.rs  socket.rs  ssl.rs
ebpf/src/programs/: bind.rs  connect.rs  dns.rs  execve.rs  file.rs  listen.rs  ssl.rs
scary/: Cargo.toml
scary-common/: Cargo.toml
scary-ebpf-common/: Cargo.toml
scary-ebpf-common/src/: error.rs  event.rs  lib.rs  task.rs  vmlinux.rs
scary-ebpf-file/: Cargo.toml
scary-ebpf-file-lsm/: Cargo.toml
scary-ebpf-file-lsm/src/: main.rs  vmlinux.rs
scary-ebpf-file/src/: main.rs
scary-ebpf-net/: Cargo.toml
scary-ebpf-net/src/: main.rs
scary-ebpf-process/: Cargo.toml
scary-ebpf-process/src/: main.rs
scary-logger-plugins/: Cargo.toml
scary-logger-plugins/src/: s3.rs
scary-userspace-common/: Cargo.toml
scary-userspace-common/src/: logger.rs
scary/src/: main.rs  programs.rs
xtask/src/: build_ebpf.rs  run.rs
