[workspace]
resolver = "2"
members = [
    "xtask",
    "scary",
    "scary-common",
    "scary-userspace-common",
    "scary-ebpf-common",
    "scary-ebpf-net",
    "scary-ebpf-process",
    "scary-ebpf-file-lsm",
    "scary-ebpf-file",
    "scary-ebpf-common",
    "scary-logger-plugins",
]
default-members = ["xtask", "scary", "scary-common"]

[workspace.dependencies]
aya = { version = "0.13.0", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
bytes = { version = "1.7.2" }
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }

[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
