[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"

[package.metadata.bpf]
name = "ebpf"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
scary-ebpf-common = { path = "../scary-ebpf-common" }
zerocopy = "0.8.9"
zerocopy-derive = "0.8.9"

[[bin]]
name = "ebpf"
path = "src/main.rs"

[lib]
name = "ebpf"
path = "src/lib.rs"
