[package]
name = "scary-ebpf-file"
version = "0.1.0"
edition = "2021"

[package.metadata.bpf]
name = "scary-ebpf-file"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
scary-ebpf-common = { path = "../scary-ebpf-common" }

[[bin]]
name = "scary-ebpf-file"
path = "src/main.rs"
