[package]
name = "scary-logger-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.68"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
chrono = "0.4.38"
flate2 = "1.0.34"
scary-userspace-common = { path = "../scary-userspace-common" }
serde_json = "1.0"
thiserror = "1.0.64"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.40"
zstd = "0.13.2"
