[package]
name = "scary-userspace-common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
aya = { workspace = true }
aya-log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = { workspace = true }
bytes = "1.7.0"
anyhow.workspace = true
