[package]
name = "scary"
version = "0.1.0"
edition = "2021"

ebpf_debug_path = "target/bpfel-unknown-none/debug"
ebpf_release_path = "target/bpfel-unknown-none/release"

[dependencies]
anyhow = { workspace = true }
aws-sdk-s3 = "0.28.0"
aya = { workspace = true }
aya-log = { workspace = true }
bytes = "1.0"
chrono = "0.4.38"
clap = { workspace = true, features = ["derive"] }
config = "0.14.0"
env_logger = {workspace = true }
libc = { workspace = true }
log = { workspace = true }
mpsc = "0.2.3"
nix = "0.26.2"
scary-logger-plugins = { path = "../scary-logger-plugins" }
scary-ebpf-common = { path = "../scary-ebpf-common" }
ebpf = { path = "../ebpf" }
scary-userspace-common = { path = "../scary-userspace-common" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
base64 = "0.22.1"
lazy_static = "1.5.0"

[[bin]]
name = "scary"
path = "src/main.rs"
